/*
 * Copyright 2024 Sk Niyaj Ali
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

package com.niyaj.common.tags

object AbsentScreenTags {

    const val ABSENT_SCREEN_TITLE = "Absent Employees"
    const val ABSENT_NOT_AVAILABLE = "Absent Employees Not Available"
    const val ABSENT_SEARCH_PLACEHOLDER = "Search For Absents Employee..."

    const val CREATE_NEW_ABSENT = "Add Absent Employee"
    const val EDIT_ABSENT_ITEM = "Update Absent Employee"

    const val ADD_EDIT_ABSENT_SCREEN = "AddEdit Absent Screen"

    const val ABSENT_EMPLOYEE_NAME_FIELD = "Employee Name"
    const val ABSENT_EMPLOYEE_NAME_ERROR = "EmployeeNameError"

    const val ABSENT_DATE_FIELD = "Absent Date"
    const val ABSENT_DATE_ERROR = "AbsentDateError"

    const val ABSENT_REASON_FIELD = "Absent Reason"

    const val ADD_EDIT_ABSENT_BTN = "AddEditAbsentEntry"

    const val ABSENT_EMPLOYEE_NAME_EMPTY = "Employee name must not be empty"

    const val ABSENT_DATE_EMPTY = "Absent date must not be empty"
    const val ABSENT_DATE_EXIST = "Selected date already exists."

    const val DELETE_ABSENT_TITLE = "Delete Employee Absent?"
    const val DELETE_ABSENT_MESSAGE =
        "Are you sure to delete these entries? This action cannot be undone."

    const val ABSENT_TAG = "Absent-"
    const val ABSENT_LIST = "AbsentList"
    const val AB_EMPLOYEE_TAG = "AbEmployee"

    const val ABSENT_SETTINGS_NOTE = "Make Sure To Import Employee Before Importing Employee Absent Dates."

    const val ABSENT_SETTINGS_TITLE = "Absent Settings"

    const val IMPORT_ABSENT_TITLE = "Import Absentees"
    const val IMPORT_ABSENT_NOTE_TEXT = "Make sure to open absentees.json file."

    const val EXPORT_ABSENT_TITLE = "Export Absentees"

    const val EXPORT_ABSENT_FILE_NAME = "absentees"
}
