...
    const val TEXT_FIELD_LEADING_ICON = "TextFieldLeadingIcon"
    const val TEXT_FIELD_TRAILING_ICON = "TextFieldLeadingIcon"

    const val SEARCH_ITEM_NOT_FOUND = "Searched Item Not Found."
    const val SEARCH_ITEM_PLACEHOLDER = "Search for items..."

    const val STANDARD_BACK_BUTTON = "StandardBackButton"
    const val SEARCH_BAR_CLEAR_BUTTON = "SearchBarClearButton"
    const val STANDARD_SEARCH_BAR = "StandardSearchBar"
    const val FAB_TEXT = "Create New"
    const val LOADING_INDICATION = "loadingIndicator"
    const val SEARCH_ICON = "SearchIcon"
    const val SETTINGS_ICON = "SettingsIcon"
    const val EDIT_ICON = "EditIcon"
    const val DELETE_ICON = "DeleteIcon"
    const val CLEAR_ICON = "ClearIcon"
    const val SELECTALL_ICON = "SelectAllIcon"


    const val JSON_FILE_TYPE = "application/json"

    const val JSON_FILE_EXTENSION = ".json"
...
