...
                    isError = dateError != null,
                    errorText = dateError,
                    trailingIcon = {
                        PoposTonalIconButton(
                            icon = PoposIcons.CalenderMonth,
                            onClick = dialogState::show,
                            modifier = Modifier.testTag("ChooseDate"),
                        )
                    },
                    readOnly = true,
                    errorTextTag = ABSENT_DATE_ERROR,
                    suffix = {
                        Row(
...
